--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@angular/compiler": "^11.0.8",
     "@angular/core": "^11.0.8",
     "@angular/forms": "^11.0.8",
+    "@angular/localize": "^11.0.8",
     "@angular/platform-browser": "^11.0.8",
     "@angular/platform-browser-dynamic": "^11.0.8",
     "@angular/router": "^11.0.8",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "bootstrap": "^4.5.0",
     "rxjs": "^6.6.3",
     "tslib": "^2.1.0",
     "zone.js": "^0.11.3"
