--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.8",
-    "@angular/common": "^11.0.8",
-    "@angular/compiler": "^11.0.8",
-    "@angular/core": "^11.0.8",
-    "@angular/forms": "^11.0.8",
-    "@angular/localize": "^11.0.8",
-    "@angular/platform-browser": "^11.0.8",
-    "@angular/platform-browser-dynamic": "^11.0.8",
-    "@angular/router": "^11.0.8",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
-    "bootstrap": "^4.5.0",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.1.0",
-    "zone.js": "^0.11.3"
+    "@angular/animations": "11.0.8",
+    "@angular/common": "11.0.8",
+    "@angular/compiler": "11.0.8",
+    "@angular/compiler-cli": "11.2.7",
+    "@angular/core": "11.0.8",
+    "@angular/forms": "11.0.8",
+    "@angular/localize": "^11.2.7",
+    "@angular/platform-browser": "11.0.8",
+    "@angular/platform-browser-dynamic": "11.0.8",
+    "@angular/router": "11.0.8",
+    "bootstrap": "^4.6.0",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.1",
+    "rxjs": "6.6.3",
+    "tslib": "2.1.0",
+    "typescript": ">=4.0 <4.2",
+    "zone.js": "0.11.3"
   },
   "scripts": {
     "ng": "ng",
